# Connect4

./: .gitignore  CMakeLists.txt  main.cpp
lib/board/: CMakeLists.txt  board.cpp  board.h
lib/game/: CMakeLists.txt  game.cpp  game.h
lib/piece/: CMakeLists.txt  piece.cpp  piece.h
